--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,14 @@
 <h1>Create new article </h1>
 
+<% if @article.errors.any? %>
+<h2>The following errors prevented article from getting created</h2>
+  <ul>
+    <% @article.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= form_for @article do |f| %>
 
     <p>
@@ -15,6 +24,5 @@
     <p>
       <%= f.submit %>
     </p>
-
 
 <% end %>
