Add partials and destroy action

--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -1,2 +1,2 @@
 <h1>To jest homepage</h1>
-<%= link_to 'About', pages_about_path %>
+<%= link_to "Alpha Blog", articles_path %> | <%= link_to 'About', pages_about_path %>
