--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -1,2 +1,5 @@
-<h1>To jest homepage</h1>
-<%= link_to "Alpha Blog", articles_path %> | <%= link_to 'About', pages_about_path %>
+
+<div class="center jumbotron">
+  <h1>ALPHA BLOG</h1>
+  <%= link_to "Sign up now","#", class: "btn btn-primary btn-lg btn-xlarge" %>
+</div>
