--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,6 +40,36 @@ $navbar-default-bg: #37aaf2;
   background-color: black;
 }
 
+.article-meta-details{
+  border-top: 1px solid #eaeaea;
+  margin-top: 15px;
+}
+
+.listing{
+  list-style: none;
+  padding-left: 0;
+}
+
+.article-actions{
+  border-top: 1px solid #eaeaea;
+  padding-top: 5px;
+}
+
+.description{
+  margin-top: 0;
+}
+
+.article-title {
+font-weight: bold;
+font-size: 1.5em;
+}
+
+.article-body {
+border-top: 1px solid #eaeaea;
+padding-top: 15px;
+padding-bottom: 15px;
+}
+
 footer{
   margin-top: 45px;
   padding-top: 5px;
