--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,24 +1,8 @@
-<h1>Listing of articles</h1>
-<p>
-<%= link_to "Create new article", new_article_path %>
-</p>
-
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Description</th>
-    <th>Edit</th>
-    <th>Show</th>
-  </tr>
-
-  <% @articles.each do |article| %>
-  <tr>
-    <td><%= article.title %></td>
-    <td><%= article.description %></td>
-    <td><%= link_to "Edit", edit_article_path(article) %></td>
-    <td><%= link_to "Show", article_path(article) %></td>
-    <td><%= link_to "Delete", article_path(article), method: :delete, data: {confirm: "Are you sure to delete this record?"} %></td>
-  </tr>
-  <% end %>
-
-</table>
+<h1 align="center">Listing all articles</h1>
+<div align="center">
+  <%= will_paginate %>
+</div>
+<%= render 'article', obj: @articles %>
+<div align="center">
+  <%= will_paginate %>
+</div>
