--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,12 +1,31 @@
-<h1>Showing selected article</h1>
+<h2 align="center">Title: <%= @article.title %></h2>
+<div class="well col-xs-8 col-xs-offset-2">
+    <% if @article.user %>
+      <ul class="listing">
+        <div class="row center">
+          <div class="col-md-4col-md-offset-4">
+            <li>Created by:</li>
+            <li><%= link_to gravatar_for(@article.user), user_path(@article.user) %></li>
+            <li class="article-title">
+              <%= link_to @article.user.username, user_path(@article.user) %>
+            </li>
+            <li><small><%= pluralize(@article.user.articles.count, "article") if @article.user.articles %>
+            </small></li>
+          </div>
+        </div>
+      </ul>
+    <% end %>
+  <h4 class="center description"><strong>Description:</strong></h4>
+  <hr>
+  <%= simple_format(@article.description) %>
+  <div class="article-actions">
+    <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
+       <%= link_to "Edit article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+       <%= link_to "Delete this article", article_path(@article), method: :delete,
+                                          data: { confirm: "Are you sure you want to delete this article?"},
+                                          class: "btn btn-xs btn-danger" %>
+    <% end %>
+       <%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success" %>
 
-<p>
-  Title: <%= @article.title %>
-</p>
-
-<p>
-  Description: <%= @article.description %>
-</p>
-
-<%= link_to "Edit article", edit_article_path(@article) %> |
-<%= link_to "Back to article lisitng", articles_path %>
+  </div>
+</div>
